<resources>
    <string name="app_name">Practica1</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_to_register">GO TO REGISTER</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="go_to_login">GO TO LOGIN</string>

    <string name="error_email">Email is required</string>
    <string name="error_password">Password is required</string>
    <string name="error_name">Name is required</string>
    <string name="logged_in">Logged In</string>
    <string name="no_match">No match</string>
    <string name="registered">Registered</string>

    <string name="logout">Logout</string>

    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="want_to_delete">Do you want to delete this item?</string>
    <string name="yes">yes</string>
    <string name="clean_list">clean_list</string>

</resources>