<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="207dp"
        android:layout_height="207dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/etr_name"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:inputType="textPersonName"
        android:hint="@string/name" />


    <EditText
        android:id="@+id/etr_email"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/etr_password"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btn_register"
        android:onClick="onClick"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/whiteColor"
        android:background="@color/coralColor"
        android:text="@string/register" />

    <Button
        android:id="@+id/btn_goto_login"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/coralColor"
        android:background="@color/transparent"
        android:text="@string/go_to_login" />

</LinearLayout>